refactor: 用"收集-处理"工作模式替代惰性扫描
- 移除惰性扫描系统（懒散/部分/全状态），并替换为
  通过IteratorManager + ScanPlan进行COLLECT→PROCESS双阶段扫描
- 删除操作队列、队列操作、区域追踪器、示意快照
- 重写模块基类：简化的预处理/执行流程，
  每个处理器添加了 isCorrectBlock（） 钩子，移除了客户端→mc 重命名
- 每个处理程序（打印/矿井/流体移除/图形界面/填充/基岩）现在使用
  canProcessPos（） + isCorrectBlock（） 用于位置过滤
- GUI 处理程序：以 2ms 预算实现时脉扩展扫描，以避免卡顿
- 简化 MixinGui/MixinHud 调试渲染：缓存 getGuiInfo（），
  移除formatAlignedNumber、懒惰状态显示、脏区域计数器
- 移除弃用配置：lazyEnterTicks、lazyDirtyWakeThreshold，
  使用ReachDistance。
- 添加循环模式快捷键：循环打印→矿→填充→流体→基岩
- 重命名LitematicaUtils： isWithinSelection1ModeRange→inSelection，
  comparePos→isPosInBox， add getBlockState（） helper
- 移除 MixinClientPacketListener.onBlockUpdate（不再有脏追踪）
- 修正 xx rr lzh.json 打字错误
- 更新 CHANGELOG 和 README